--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/key/
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
