--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_tencentad: ^0.0.3
+  flutter_unionad: ^1.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
