--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_universalad
 description: A new Flutter project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/gstory0404/flutter_universalad
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
