--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -42,7 +42,14 @@ android {
     }
 
     signingConfigs {
-
+        config {
+            storeFile file("..\\key\\treeKey.jks")
+            storePassword "mouqibaba233"
+            storePassword "mouqibaba233"
+            storePassword "mouqibaba233"
+            keyAlias "treeKey"
+            keyPassword "mouqibaba233"
+        }
     }
 
 
@@ -50,12 +57,12 @@ android {
         debug {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
 }
