--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_universalad
 description: A flutter plugin for TencentAD and Bytedance-UnionAD.
-version: 1.0.6
+version: 1.0.7
 homepage: https://github.com/gstory0404/flutter_universalad
 
 environment:
@@ -11,12 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_tencentad: ^1.0.5
+  flutter_tencentad: ^1.1.0
   flutter_unionad: ^1.1.9
 #  flutter_tencentad:
 #    git:
 #      url: https://github.com/gstory0404/flutter_tencentad.git
-#      ref: master
+#      ref: branch_OC
 
 dev_dependencies:
   flutter_test:
