--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_universalad
 description: A flutter plugin for TencentAD and Bytedance-UnionAD.
-version: 1.1.0
+version: 1.1.1
 homepage: https://github.com/gstory0404/flutter_universalad
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_unionad: ^1.2.8
-  flutter_tencentad: ^1.2.0
+  flutter_unionad: 1.3.1
+  flutter_tencentad: 1.2.1
 #  flutter_tencentad:
 #    git:
 #      url: https://github.com/gstory0404/flutter_tencentad.git
