--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_unionad: 1.3.1
-  flutter_tencentad: 1.2.1
+  flutter_unionad: ^1.3.1
+  flutter_tencentad: ^1.2.1
 #  flutter_tencentad:
 #    git:
 #      url: https://github.com/gstory0404/flutter_tencentad.git
