--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -43,7 +43,10 @@ android {
 
     signingConfigs {
         config {
-
+            storeFile file("..\\key\\treeKey.jks")
+            storePassword "mouqibaba233"
+            keyAlias "treeKey"
+            keyPassword "mouqibaba233"
         }
     }
 
