--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_universalad
 description: A flutter plugin for TencentAD and Bytedance-UnionAD.
-version: 1.1.4
+version: 1.1.5
 homepage: https://github.com/gstory0404/flutter_universalad
 
 environment:
@@ -11,12 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_unionad: ^1.3.8
-  flutter_tencentad: ^1.2.2
+  flutter_unionad: ^1.3.9
+  flutter_tencentad: ^1.2.3
 #  flutter_tencentad:
 #    git:
 #      url: https://github.com/gstory0404/flutter_tencentad.git
-#      ref: branch_OC
+#      ref: f5e5bbeafdfa09d5919dd82151f444b4e8408310
 
 dev_dependencies:
   flutter_test:
