--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_universalad
 description: A flutter plugin for TencentAD and Bytedance-UnionAD.
-version: 1.1.8
+version: 1.1.9
 homepage: https://github.com/gstory0404/flutter_universalad
 
 environment:
@@ -10,8 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_unionad: ^1.3.13
+  # 穿山甲
+  flutter_unionad: ^1.3.14
+  # 优量汇
   flutter_tencentad: ^1.2.6
 #  flutter_tencentad:
 #    git:
